# STM32F103C8T6-Template

./: README.md
app/: app.c  app.h
board/custom/: board.c  board.h
common/: project_assert.c  project_assert.h  project_status.h
config/: project_config.h
config/board/: board_config.h
config/product/: product_config.h
docs/: preview.md  架构设计.dio  架构设计.md
drivers/: drivers.c  drivers.h
platform/: platform.c  platform.h  platform_irq.c  platform_irq.h  platform_msp.c  platform_msp.h
project/: CMakeLists.txt  STM32F103XB_FLASH.ld
services/: services.c  services.h
user/: FreeRTOSConfig.h  freertos_hooks.c  main.c  main.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  stm32f1xx_it.h
